--- a/res/layout-land/inspiration.xml
+++ b/res/layout-land/inspiration.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/bakgr2" >
+    android:background="@drawable/back3" >
 
     <TextView
         android:id="@+id/color_region"
