--- a/res/layout/detail_fragment.xml
+++ b/res/layout/detail_fragment.xml
@@ -3,6 +3,7 @@
     android:id="@+id/ScrollView1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/back3"
     android:orientation="vertical" >
 
     <TextView
